[package]
name = "todoclist"
version = "0.1.0"
authors = ["Miehau <michal.mlak.1@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
aes-gcm = "0.10.1"  # For encryption
base64 = "0.21.0"   # For encoding
directories = "5.0.0" # For config file location
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
